# hqd_epr

./: .gitattributes  .gitignore  LICENSE  README.org  pyproject.toml
acquisition/: cryo_switch_calibatrion.py  debug.py  debug_raw_adc.py  fid_curr_scan.py  hahn_echo_2d_field_gradient_scan.py  hahn_echo_2d_freq_gradient_scan.py  hahn_echo_current_scan.py  hahn_echo_no_demodulation.py  iq_calibration_output.py  pi_pulse_calibration_amplitude.py  spectrum_gradient_2d_scan.py
analysis/: fit_2d_spectrum.py  resonator_spin_characterization.py  resonator_spin_lorentzian_characterization.py  spin_polarization_factor.py
analyze_data/: .freq_mag_field_2d.py.~undo-tree~  .resonator_characterization.py.~undo-tree~  .resonator_spin_characterization.py.~undo-tree~  .utils.py.~undo-tree~  freq_mag_field_2d.py  resonator_characterization.py  resonator_characterization.py~  resonator_spin_characterization.py  resonator_spin_characterization.py~  utils.py  utils.py~
collect_data/: #MW_T2_FID.py#  .#MW_T2_FID.py  .MW_T2_FID.py.~undo-tree~  01_mixer_calibration.py  02_input_calibration.py  04_pi_pulse_calibration.py  CW_qm.py  IQ_mixer_imbalance.py  IQ_mixer_imbalance_SignalHound.py  MW_T1_hahnEcho.py  MW_T1_hahnEcho_with_var_wait.py  MW_T2_CPMG.py  MW_T2_CPMG_with_var_wait.py  MW_T2_FID.py  MW_T2_FID.py~  MW_T2_FID_with_var_wait.py  MW_T2_hahnEcho.py  MW_T2_hahnEcho_with_var_wait.py  Time_dependent_vna_data_collection_with_cfreq.py  adc_calibrations.py  fid.py  hahn_echo.py  hahn_echo_gradient_scan.py  hahn_echo_gradient_scan_slice.py  mag_vna_scan2D.py  mag_vna_scan2D_with_curr.py  (+14 more)
(+193 files in other folders)
